--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script defer src="script.js"></script>
   <title>Login</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="styles.css">
@@ -11,7 +12,7 @@
 
 <div class="login-form">
   <h2>Login</h2>
-  <form action="#" method="POST">
+    <form action="#" method="POST" onsubmit="return validateLogin()">
     <div class="form-group">
       <label for="email">Email address</label>
       <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required>
@@ -26,6 +27,5 @@
     <p>Don't have an account? <a href="register.html">Register</a></p>
   </div>
 </div>
-
 </body>
 </html>
